--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "kartik-v/yii2-builder": "@dev",
         "kartik-v/yii2-widget-datepicker": "@dev",
         "kartik-v/yii2-widget-select2": "@dev",
-        "yiisoft/yii2-jui": "^2.0"
+        "yiisoft/yii2-jui": "^2.0",
+        "kartik-v/yii2-number": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
