--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "kartik-v/yii2-widget-datepicker": "@dev",
         "kartik-v/yii2-widget-select2": "@dev",
         "yiisoft/yii2-jui": "^2.0",
-        "kartik-v/yii2-number": "dev-master"
+        "kartik-v/yii2-number": "dev-master",
+        "moonlandsoft/yii2-phpexcel": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
